240707 brand new MERN project with DB, untill authentication

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon-trans.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Group-8 Auction</title>
+    <title>Group-8 Silent Auction</title>
   </head>
   <body>
     <div id="root"></div>
